# dockersetup

./: .gitignore  README.md  TASKS.md  build_bin.py  dockersetup.py  pyproject.toml  repomix-output.md  services.yml  templates.yml
.github/workflows/: build-assets.yml  release.yml
docs/: CHANGELOG.md
modules/: auto_configure.py  compose_build.py  deploy_preflight.py  deploy_start.py  directories.py  env_wizard.py  network.py  preflight.py  tier_select.py
modules/strategies/: __init__.py  strategy_dashboards.py  strategy_downloaders.py  strategy_servarr.py
refs/: homepage_reference.md
resources/: Thumbs.db  install.sh  installer.iss  services.yml  templates.yml
src/: gui.py
src/apps/: adguardhome.py  audiobookshelf.py  authelia.py  authentik.py  base_app.py  bazarr.py  beszel.py  caddy.py  calibre_web.py  changedetection.py  cloudcmd.py  cloudflare_ddns.py  cloudflare_tunnel.py  code_server.py  crowdsec.py  dashy.py  docker_prune.py  dockge.py  docmost.py  dokploy.py  enshrouded.py  filebrowser.py  fileflows.py  firefly_iii.py  flame.py  flaresolverr.py  hkserver.py  home_assistant.py  homepage.py  immich.py  it_tools.py  jellyfin.py  kasm.py  komga.py  kopia.py  lidarr.py  loader.py  mariadb_adminer.py  mealie.py  mongodb_mongo_express.py  (+37 more)
src/gui/: __init__.py  base_frame.py  deploy_frame.py  env_frame.py  logs_frame.py  services_frame.py  summary_frame.py  welcome_frame.py
src/modules/: auto_configure.py  compose_build.py  deploy_preflight.py  (+6 more)
tests/: test_runtime.py
utils/: logger.py  paths.py  state.py  uninstall.py  updater.py  yaml_parser.py
(+15 files in other folders)
