[tool.poetry]
name = "dockersetup"
version = "1.5.1"
description = "Cross-platform python-based Docker media stack setup script"
authors = ["suuift <suuift@gmail.com>"]
readme = "README.md"
packages = [{include = "dockersetup.py"}]

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^2.0.1"
rich = "^13.7.0"
"ruamel.yaml" = "^0.18.6"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
tzlocal = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pyinstaller = "^6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
